Removed fixed widths from `.smalllabel` and `.smallnumber` CSS styles and updated table cells in PHP to use the `link` class with right alignment.

--- a/maps/css/MAPSStyle.css
+++ b/maps/css/MAPSStyle.css
@@ -294,7 +294,6 @@ h6 {
   line-height: 12px;
   font-size: 12px;
   text-align: left;
-  width: 68px;
 }
 
 .smallnumber {
@@ -302,7 +301,6 @@ h6 {
   line-height: 12px;
   font-size: 12px;
   text-align: right;
-  width: 25px;
 }
 
 .header {
